<resources>
    <string name="app_name">HomeMatters</string>
    <string name="general_continue_text">Continuar</string>
    <string name="general_save_text">Guardar</string>
    <string name="general_required_field">Campo obligatorio</string>
    <string name="general_something_went_wrong">Algo no ha ido como era de esperar. Intentalo de nuevo más tarde.</string>
    <string name="login_name_hint_text">Nombre</string>
    <string name="login_email_hint_text">Email</string>
    <string name="login_password_hint_text">Contraseña</string>
    <string name="login_confirm_password_hint_text">Repetir contraseña</string>
    <string name="login_recovery_password_text">¿Has olvidado la contraseña?</string>
    <string name="login_sign_up_text">¿Todavía no tienes cuenta? Regístrate</string>
    <string name="sign_up_login_text">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="menu_bottom_navigation_group_text">Hogar</string>
    <string name="menu_bottom_navigation_task_list_text">Lista</string>
    <string name="menu_bottom_navigation_calendar_text">Calendario</string>
    <string name="menu_bottom_navigation_chart_text">Estadísticas</string>
    <string name="menu_bottom_navigation_account_text">Perfil</string>
    <string name="menu_calendar_mode">Calendar Mode</string>
    <string name="task_status_done">Completada</string>
    <string name="task_status_pending">Pendiente</string>
    <string name="new_house_title">¡No tienes hogar!</string>
    <string name="new_house_description">Si quieres organizarte con tus compañeros, puedes crear un hogar e invitarlos seleccionando nueva, en caso de que quieras añadirte en una casa ya creada, comunica al administrador que te añada.</string>
    <string name="new_house_new_button">nueva</string>
    <string name="new_house_find_button">buscar</string>
    <string name="new_house_admin_description">El administrador del hogar, por defecto, es el usuario que lo crea, después una vez creado, podrás editarlo desde el detalle del hogar.</string>
    <string name="menu_add_user">Add user</string>
    <string name="menu_edit_home">edit home</string>
    <string name="user_spinner_dropdown_description"><![CDATA[<b>%1$s</b> (%2$s)]]></string>
    <string name="admin_spinner_title_text">Administrador</string>
    <string name="add_user_effort">%d pts.</string>
    <string name="add_user_warning_title">Uuups!!!</string>
    <string name="add_user_not_found_text">¡No hemos encontrado ningún usuario con ese email!</string>
    <string name="add_user_already_exist_text">¡El usuario ya está dentro del hogar!</string>
    <string name="add_user_add_button_text">Añadir</string>
    <string name="add_user_description_title">Busca al usuario que quieras agregar por su email.</string>
    <string name="add_user_find_button_text">Buscar</string>
    <string name="user_detail_delete_home_button_text">Eliminar del hogar</string>
    <string name="menu_edit_account">Edit account</string>
    <string name="user_detail_empty_home">¡No tienes hogar!</string>
    <string name="edit_user_min_effort_value">0</string>
    <string name="edit_user_max_effort_value">55</string>
    <string name="seek_bar_min_title">min</string>
    <string name="seek_bar_max_title">max</string>
    <string name="seekbar_effort_min_value_text">XS</string>
    <string name="seekbar_effort_max_value_text">XXL</string>
    <string name="edit_user_effort">%1$s - %2$d pts.</string>
    <string name="edit_user_effort_not_assigned">¡No tienes capacidad asignada!</string>
    <string name="edit_user_weekly_effort_title">Capacidad semanal</string>
    <string name="user_list_expended_effort_info">Completados: %d pts.</string>
    <string name="user_list_pending_effort_info">Pendientes: %d pts.</string>
    <string name="menu_add_task">Add task</string>
    <string name="add_task_selector_existing_button_text">Existente</string>
    <string name="add_task_selector_description_text">Puedes seleccionar una tarea sugerida por nosotros o una anteriormente creada por ti, también puedes crear una nueva si lo necesitas.</string>
    <string name="add_task_selector_title_text">Asigna una tarea</string>
    <string name="add_user_assigned_selection_text">Selecciona usuario</string>
    <string name="add_user_assigned_selection_hint">Asignado</string>
    <string name="edit_home_admin_selection_hint">Administrador</string>
    <string name="task_list_selector_title">Selecciona</string>
    <string name="task_list_selector_description">Elige entre las sugeridas por nosotros o las creadas anteriormente por ti.</string>
    <string name="chart_bar_title_home">Aquí tienes las estadísticas de los últimos 6 meses en el hogar</string>
    <string name="task_list_empty_view_text">¡No tienes ninguna tarea en este apartado!</string>
    <string name="home_effort_capacity_text">Capacidad semanal: %d pts.</string>
    <string name="chart_empty_view_description">Para poder ver las estadísticas debes estar dentro de un hogar, crea uno o dile al administrador del tuyo que te añada cuanto antes.</string>
    <string name="user_detail_no_admin_text">Para gestionar quien entra y sale del hogar tienes que hablar con el administrador, solamente él puede hacer esas funciones.</string>
    <string name="task_detail_date_hint">Fecha</string>
    <string name="task_detail_done_title">Completada:</string>
</resources>
